# Boltzmann-Lattice

./: .gitignore  CMakeLists.txt  README.md
include/: math_util.h  shader.h  utils.h
src/: main.cpp  math_util.cpp
src/Shaders/: clm.frag  main.vert  red.frag  tmp.vert
